--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,37 +1,5 @@
 [preset.0]
 
-name="Mac OSX"
-platform="Mac OSX"
-runnable=true
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path="Exports/Ludum-Dare-49.zip"
-script_export_mode=1
-script_encryption_key=""
-
-[preset.0.options]
-
-custom_template/debug=""
-custom_template/release=""
-application/name="Birds"
-application/info="Made with Godot Engine"
-application/icon=""
-application/identifier=""
-application/signature=""
-application/short_version="1.0"
-application/version="1.0"
-application/copyright=""
-display/high_res=false
-privacy/camera_usage_description=""
-privacy/microphone_usage_description=""
-texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
-
-[preset.1]
-
 name="HTML5"
 platform="HTML5"
 runnable=true
@@ -39,11 +7,11 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exports/index.html"
+export_path="Exports/HTML/index.html"
 script_export_mode=1
 script_encryption_key=""
 
-[preset.1.options]
+[preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
@@ -55,7 +23,7 @@ html/head_include=""
 html/canvas_resize_policy=2
 html/experimental_virtual_keyboard=false
 
-[preset.2]
+[preset.1]
 
 name="Windows Desktop"
 platform="Windows Desktop"
@@ -64,11 +32,11 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exports/birds.exe"
+export_path="Exports/Windows/birds.exe"
 script_export_mode=1
 script_encryption_key=""
 
-[preset.2.options]
+[preset.1.options]
 
 custom_template/debug=""
 custom_template/release=""
